deployment/kustomization/base/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt-deployment
  labels:
    app: definitely-not-crosswords
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: definitely-not-crosswords
  template:
    metadata:
      labels:
        app: definitely-not-crosswords
    spec:
      containers:
        - name: nuxt-container
          image: nuxt-app:latest
          imagePullPolicy: Never
          resources:
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 30
