deployment/kustomization/base/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: definitely-not-crosswords
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: definitely-not-crosswords.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nuxt-service
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nuxt-service
spec:
  type: NodePort
  selector:
    app: definitely-not-crosswords
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: ws
      port: 3002
      targetPort: 3002
